--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dashboard-mat-ui",
+  "name": "rock-catalogue",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,8 +11,12 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "recharts": "^1.8.5"
+    "recharts": "^1.8.5",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,6 +27,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "/",
   "browserslist": {
     "production": [
       ">0.2%",
