--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
+    "form-data": "^3.0.0",
     "material-ui-dropzone": "^3.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -18,7 +20,8 @@
     "react-scripts": "3.4.3",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "superagent": "^6.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
